# DSCI_310_Group_5_Package

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/DSCI_prediction/: DSCI_prediction.py
src/prediction/: prediction.py
tests/: test_mean.py  test_plot_boxplot.py  test_plot_confusion_matrix.py  test_plot_hist.py  test_tuned_para_table.py
